--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Appflat : " />
-
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
     <title>Appflat</title>
   </head>
 
@@ -23,6 +21,14 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+		  <h2>Doel</h2>
+		  <p></p>
+		  <h1>Intro</h1>
+		  <h3>Benodigheden</h3>
+		  <h1>Werkwijze</h1>
+		  <h1>Resultaat</h1>
+		  <h2>Samenvatting</h2>
+		  <h3>Vragen</h3>
       </section>
     </div>
 
@@ -33,8 +39,6 @@
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
-
+ 
   </body>
 </html>
