--- a/handboek.html
+++ b/handboek.html
@@ -22,8 +22,25 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 		  <ul>
-			  <li><a href="handboek.html">Handboek (NL)</a></li>
+			  <li><a href="index.html">Thuis/Home</a></li>
 		  </ul>
+		  
+		  <h3>Doel</h3>
+		  <p>Development site bouwen m.b.v. github.com</p>
+		  <h2>Intro</h2>
+		  <p></p>
+		  <h4>Benodigheden</h4>
+		  <p><a href="www.github.com">GitHub</a></p>
+		  <h2>Werkwijze</h2>
+		  <ul>
+			  <li></li>
+		  </ul>
+		  <h2>Resultaat</h2>
+		  <p>Werk in proces!</p>
+		  <h2>Samenvatting</h2>
+		  <p></p>
+		  <h3>Vragen</h3>
+		  <p>Zullen niet beantwoord worden!</p>
       </section>
     </div>
 
