front image added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   </head>
 
   <body>
-
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+		  	<p><img src="images/2560_4320x3240_IMG_4462.JPG"></p>
+
           <a id="forkme_banner" href="https://github.com/rowez/appFlat">View on GitHub</a>
         </header>
     </div>
