--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-		  	<p><img src="images/2560_4320x3240_IMG_4462.JPG"></p>
-
-          <a id="forkme_banner" href="https://github.com/rowez/appFlat">View on GitHub</a>
-        </header>
+			<img src="images/320_4320x3240_IMG_4462.JPG">
+          <!-- <a id="forkme_banner" href="https://github.com/rowez/appFlat">View on GitHub</a>
+        --></header>
     </div>
 
     <!-- MAIN CONTENT -->
@@ -24,6 +23,7 @@
       <section id="main_content" class="inner">
 		  <ul>
 			  <li><a href="handboek.html">Handboek (NL)</a></li>
+			  <li><a href="index-gh-page.html">GitHub page</a></li>
 		  </ul>
       </section>
     </div>
@@ -31,8 +31,8 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Appflat maintained by <a href="https://github.com/rowez">rowez</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">appFlat maintained by <a href="https://github.com/rowez">rowez</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub.</a></p>
       </footer>
     </div>
  
