--- a/index-gh-page.html
+++ b/index-gh-page.html
@@ -31,6 +31,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+		  <ul>
+			  <li><a href="index.html">Thuis/Home</a></li>
+		  </ul>
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
