--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Appflat : " />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <title>Appflat</title>
   </head>
@@ -13,7 +14,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-			<img src="images/320_4320x3240_IMG_4462.JPG">
+			<img src="images/2560_4320x3240_IMG_4462.JPG">
           <!-- <a id="forkme_banner" href="https://github.com/rowez/appFlat">View on GitHub</a>
         --></header>
     </div>
@@ -25,6 +26,7 @@
 			  <li><a href="handboek.html">Handboek (NL)</a></li>
 			  <li><a href="index-gh-page.html">GitHub page</a></li>
 		  </ul>
+		  <img src="images/580x200_uiterwaardondergelopen.jpg">
       </section>
     </div>
 
