Using jquery.mobile or not?

--- a/index.html
+++ b/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html>
-
   <head>
+    <title>Appflat</title>
+    <meta name="description" content="wortel = root">
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Appflat : " />
-    <!-- do not using viewports! <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <title>Appflat</title>
+    <!-- Better not to use viewports! -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<!--[if IE]>
+	<script> src="http://html5shiv.googlecode.com/svn/trunk/html5.js"</script>
+	<![endif]-->
+	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen"/>
+	<link rel="stylesheet" href="/appFlat/js/jquery.mobile-1.4.2.min.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"/>
+	<link rel="stylesheet" type="text/css" href="stylesheets/custom.css" media="screen"/>
+	<script src="/appFlat/js/jquery.mobile-1.4.2.min.js"></script>
+	<script src="/appFlat/js/modernizr.js"></script>
+	<script src="/appFlat/js/respond.min.js"></script>
+	<style>
+	</style>
   </head>
 
   <body>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+<ul>
+	<li><a href="zien/thuis">Thuis</a></li>
+	<li><a href="zien/rowez">Rowez</a></li>
+	<li><a href="zien/over">Over</a></li>
+</ul>
 			<img src="images/2560_4320x3240_IMG_4462.JPG">
           <!-- <a id="forkme_banner" href="https://github.com/rowez/appFlat">View on GitHub</a>
         --></header>
@@ -33,8 +50,6 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">appFlat maintained by <a href="https://github.com/rowez">rowez</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub.</a></p>
       </footer>
     </div>
  
