Many choise but for now using FooTable, trying to get it working

--- a/index.html
+++ b/index.html
@@ -6,52 +6,123 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Appflat : " />
-    <!-- Better not to use viewports! -->
+    <!-- Better not to use viewports! Why? -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<!--[if IE]>
-	<script> src="http://html5shiv.googlecode.com/svn/trunk/html5.js"</script>
-	<![endif]-->
-	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen"/>
-	<link rel="stylesheet" href="/appFlat/js/jquery.mobile-1.4.2.min.css">
-	<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"/>
-	<link rel="stylesheet" type="text/css" href="stylesheets/custom.css" media="screen"/>
-	<script src="/appFlat/js/jquery.mobile-1.4.2.min.js"></script>
-	<script src="/appFlat/js/modernizr.js"></script>
-	<script src="/appFlat/js/respond.min.js"></script>
-	<style>
-	</style>
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css" media="screen"/>
+	<!--<link rel="stylesheet" type="text/css" href="stylesheets/jquery.mobile-1.4.2.min.css" media="screen">
+	--><link rel="stylesheet" type="text/css" href="stylesheets/footable.core.css" media="screen"/>
+	<script src="/appFlat/js/jquery-1.11.0.min.js"></script>
+	<script src="/appFlat/github/FooTable/js/footable.js"></script>
+	<!--<script src="/appFlat/github/FooTable/js/footable.sort.js"></script>
+		--><!--[if lt IE 9]>
+		<script src="/appFlat/js/respond.min.js"></script>
+		<script> src="http://html5shiv.googlecode.com/svn/trunk/html5.js"</script>
+		<![endif]-->
+	<!--<script src="/appFlat/js/jquery.mobile-1.4.2.min.js"></script>
+	--><!--<script src="/appFlat/js/modernizr-latest.js"></script>
+	--><script>
+		$(function () {
+		$('#footable').footable({
+    breakpoints: {
+        phone: 320,
+        tablet: 640,
+        big: 960
+		}});
+		});
+	</script>
+	<style>	</style>
   </head>
 
-  <body>
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-<ul>
-	<li><a href="zien/thuis">Thuis</a></li>
-	<li><a href="zien/rowez">Rowez</a></li>
-	<li><a href="zien/over">Over</a></li>
-</ul>
-			<img src="images/2560_4320x3240_IMG_4462.JPG">
-          <!-- <a id="forkme_banner" href="https://github.com/rowez/appFlat">View on GitHub</a>
-        --></header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-		  <ul>
-			  <li><a href="handboek.html">Handboek (NL)</a></li>
-			  <li><a href="index-gh-page.html">GitHub page</a></li>
-		  </ul>
-		  <img src="images/580x200_uiterwaardondergelopen.jpg">
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-      </footer>
-    </div>
- 
-  </body>
-</html>
+	<body><div id="main wrap">
+		<div id="header_wrap" class="outer">
+			<header class="inner">
+	<ul>
+		<li><a href="zien/thuis">Thuis</a></li>
+		<li><a href="zien/rowez">Rowez</a></li>
+		<li><a href="zien/over">Over</a></li>
+	</ul>
+				<img src="images/2560_4320x3240_IMG_4462.JPG">
+			  <!-- <a id="forkme_banner" href="https://github.com/rowez/appFlat">View on GitHub</a>
+			--></header>
+		</div>
+		<div id=slideshow wrap">
+		</div>
+		<div id="menu wrap">
+		</div>
+		<div id="sidebar left wrap" class="sidebar">
+		</div>
+		<div id="main_content_wrap" class="outer">
+		  <section id="main_content" class="inner">
+			  <ul>
+				  <li><a href="handboek.html">Handboek (NL)</a></li>
+				  <li><a href="index-gh-page.html">GitHub page</a></li>
+			  </ul>
+			  <img src="images/580x200_uiterwaardondergelopen.jpg">
+		  </section>
+		</div>
+<hr>		  
+<div class="table wrap">
+	<!-- http://css-tricks.com/footable-a-jquery-plugin-for-responsive-data-tables/ -->
+    <table id="footable" data-filter="#filter">
+		<caption>Table responsive?</caption>
+      <thead>
+        <tr>
+		  <th data-sort-initial="descending" data-class="expand">Small</th>
+          <th data-hide="phone" data-type="numeric">CustomerID</th>
+          <th data-sort-ignore="true">CustomerName</th>
+          <th data-hide="all">ContactName</th>
+          <th data-hide="all">Address</th>
+          <th data-hide="all">City</th>
+          <th>PostalCode</th>
+          <th>Country</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+		  <td>Alfreds</td>
+          <td>1</td>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Obere Str. 57</td>
+          <td>Berlin</td>
+          <td>12209</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+		  <td>Antonio</td>
+          <td>2</td>
+          <td>Antonio Moreno Taquería</td>
+          <td>Antonio Moreno</td>
+          <td>Mataderos 2312</td>
+          <td>México D.F.</td>
+          <td>05023</td>
+          <td>Mexico</td>
+        </tr>
+        <tr>
+		  <td>Horn</td>
+          <td>3</td>
+          <td>Around the Horn</td>
+          <td>Thomas Hardy</td>
+          <td>120 Hanover Sq.</td>
+          <td>London</td>
+          <td>WA1 1DP</td>
+          <td>UK</td>
+        </tr>
+        <tr>
+		  <td>Berglunds</td>
+          <td>4</td>
+          <td>Berglunds snabbköp</td>
+          <td>Christina Berglund</td>
+          <td>Berguvsvägen 8</td>
+          <td>Luleå</td>
+          <td>S-958 22</td>
+          <td>Sweden</td>
+        </tr>
+      </tbody>
+    </table>
+</div>
+		<div id="footer_wrap" class="outer">
+		  <footer class="inner">
+		  </footer>
+		</div>
+	</div></body></html>
