Many testing responsive

--- a/index.html
+++ b/index.html
@@ -50,14 +50,23 @@
 		</div>
 <div id="slideshow_wrap"> <!-- declare a slideshow -->
 <div class="cycle-slideshow">
-<img src="http://malsup.github.com/images/p1.jpg">
-<img src="http://malsup.github.com/images/p2.jpg">
-<img src="http://malsup.github.com/images/p3.jpg">
+<img src="images/477x306_betuwelijndoordebocht.jpg">
+<img src="images/259x149_rijn.jpeg">
+<img src="images/259x194_bomen-bloesem.jpeg">
 </div>
 </div>
+
+<figure>
+<img src="images/960_4320x3240_IMG_4462.JPG" 
+alt="Roerdomp" 
+sizes="100%"
+srcset="images/320_4320x3240_IMG_4462.JPG 480w, images/480_4320x3240_IMG_4462.JPG 960w, images/1280_4320x3240_IMG_4462.JPG 1280w">
+<figcaption>Roerdomp, 2013</figcaption>
+</figure>
+
 <div id="menu_wrap"> <!-- menu divers -->
 <ul> 
-<li class="cols-2"><a href="handboek.html">Handboek (NL)</a></li>
+<li class="cols-2"><a href="handboek.html"><marquee>Handboek (NL) Handboek (NL) Handboek (NL) Handboek (NL)</marquee></a></li>
 <li class="cols-2"><a href="index-gh-page.html">GitHub page</a></li>
 </ul>
 </div>
@@ -69,7 +78,7 @@
 		  </section>
 		</div>
 <hr>		  
-<div class="table_wrap">
+<div id="table_wrap">
 	<!-- http://css-tricks.com/footable-a-jquery-plugin-for-responsive-data-tables/ -->
     <table id="footable" data-filter="#filter">
 		<caption>Table responsive?</caption>
@@ -129,6 +138,12 @@
       </tbody>
     </table>
 </div>
+
+<div id="ace_wrap">
+
+</div>
+
+
 <div id="footer_wrap" class="outer">
 		  <footer class="inner">
 		  </footer>
