--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 
-<!--
-HTML5 Reset: https://github.com/murtaugh/HTML5-Reset
-Free to use
--->
+<!-- Important stuff for SEO, don't neglect. (And don't dupicate values across your site!) -->
+<!-- concatenate and minify for production -->
 
 <!--[if lt IE 7 ]> <html class="ie ie6 ie-lt10 ie-lt9 ie-lt8 ie-lt7 no-js" lang="en"> <![endif]-->
 <!--[if IE 7 ]>    <html class="ie ie7 ie-lt10 ie-lt9 ie-lt8 no-js" lang="en"> <![endif]-->
@@ -17,7 +15,6 @@ Free to use
 <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<!-- Important stuff for SEO, don't neglect. (And don't dupicate values across your site!) -->
 <title>Appflat</title>
 <meta name="author" content="" />
 <meta name="description" content="appflat">
@@ -35,8 +32,10 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Use Iconifyer to generate all the favicons and touch icons you need: http://iconifier.net -->
 <link rel="shortcut icon" href="favicon.ico" />
-<!-- concatenate and minify for production -->
-<link rel="stylesheet" href="github/html5reset/assets/css/reset.css" />
+<!--
+HTML5 Reset: https://github.com/murtaugh/HTML5-Reset
+Free to use
+--><link rel="stylesheet" href="github/html5reset/assets/css/reset.css" />
 <link rel="stylesheet" href="github/html5reset/assets/css/style.css" />
 <!-- Cursor reset override html5reset resec.css -->
 <link rel="stylesheet" href="github/cursor-reset/cursor-reset.css" />
