--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
 HTML5 Reset: https://github.com/murtaugh/HTML5-Reset
 Free to use
 --><link rel="stylesheet" href="github/html5reset/assets/css/reset.css" />
-<link rel="stylesheet" href="github/html5reset/assets/css/style.css" />
-<!-- Cursor reset override html5reset resec.css -->
+<!--<link rel="stylesheet" href="github/html5reset/assets/css/style.css" />
+--><!-- Cursor reset override html5reset reset.css -->
 <link rel="stylesheet" href="github/cursor-reset/cursor-reset.css" />
 <script src="/appFlat/js/jquery-1.11.0.min.js"></script>
 <!-- Lea Verou's Prefix Free, lets you use un-prefixed properties in your CSS files -->
@@ -105,7 +105,8 @@ $('table').trigger('footable_collapse_all').trigger('footable_redraw');
 $('table').trigger('footable_clear_filter');
 });
 </script>
-<link rel="stylesheet" href="stylesheets/custom.css" />
+<!--<link rel="stylesheet" href="github/lightbox2/css/lightbox.css">
+--><link rel="stylesheet" href="stylesheets/custom.css" />
 <style>	</style>
 </head>
 <body><!--[if lt IE 7]>
@@ -123,7 +124,16 @@ $('table').trigger('footable_clear_filter');
 </ul>
 </div>  <!-- menu wrap -->
 </section>
-<img src="images/2560_4320x3240_IMG_4462.JPG">
+<!--			<h3 style="clear: both;">Four image set</h3>
+			<div class="image-row">
+				<div class="image-set">
+					<a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/img/demopage/image-3.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/img/demopage/thumb-3.jpg" alt=""/></a>
+					<a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/img/demopage/image-4.jpg" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/img/demopage/thumb-4.jpg" alt="" /></a>
+					<a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/img/demopage/image-5.jpg" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/img/demopage/thumb-5.jpg" alt="" /></a>
+					<a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/img/demopage/image-6.jpg" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/img/demopage/thumb-6.jpg" alt="" /></a>
+				</div>
+			</div>
+--><img src="images/2560_4320x3240_IMG_4462.JPG">
 <!-- <a id="forkme_banner" href="https://github.com/rowez/appFlat">View on GitHub</a>
 -->
 <h1><a href="files">Page Title</a></h1>
