--- a/index.html
+++ b/index.html
@@ -27,32 +27,29 @@
 <body><!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-	<div id="menu_wrap">
-		<div id="menuInhoud">
-			<hgroup>
-				<h1>HOME</h1>
-					<h2>Lente</h2>
-						<h3>page <a href="zien/thuis">10</a></h3>
-							<h4>Bloesem in de Betuwe</h4>
-				<h1>ROWEZ</h1>
-					<h2>Nieuw site</h2>
-						<h3>page <a href="zien/rowez">20</a></h3>
-							<h4>Geschikt voor alle scherm formaten</h4>
-				<h1>Over</h1>
-					<h2>Ron</h2>
-						<h3>page <a href="zien/over">30</a></h3>
-							<h4>Woonachtig in de gemeente Buren, Holland</h4>
-			</hgroup>
-		</div>
-		<div id="imageInhoud"><div></div></div>
-	</div>  <!-- menu wrap -->
-	<div id="slideshow"><div></div></div>	
+	<div id="imageInhoud"><div>imageInhoud</div></div>
+	<div id="menuInhoud">
+		<hgroup>
+			<h1>HOME</h1>
+				<h2>Lente</h2>
+					<h3>page <a href="zien/thuis">10</a></h3>
+						<h4>Bloesem in de Betuwe</h4>
+			<h1>ROWEZ</h1>
+				<h2>Nieuw site</h2>
+					<h3>page <a href="zien/rowez">20</a></h3>
+						<h4>Geschikt voor alle scherm formaten</h4>
+			<h1>Over</h1>
+				<h2>Ron</h2>
+					<h3>page <a href="zien/over">30</a></h3>
+						<h4>Woonachtig in de gemeente Buren, Holland</h4>
+		</hgroup>
+	</div>
+	<div id="slideshow"><div>Eiland van Maurik</div></div>	
 	<div id='layout_footer'>
 </div> <!-- #layout_footer -->
 </div> <!-- #layout -->
 <div id='footer'>
-	appFlat - Rowez - 2014
+	Rowez - 2014
 </div> <!-- #footer -->
-Tekst binnen de body!
 </body>
 </html>
