--- a/try-index.htm
+++ b/try-index.htm
@@ -1,5 +1,24 @@
 <html>
-	<header>
+	<head>
 		<link rel="stylesheet" href="stylesheets/intro.css" />
-	</header>
-<body>	<div id="imageInhoud"><div></div></div></body></html>
+	</head>
+<body>
+	<div id="imageInhoud"><div>imageInhoud</div></div>
+	<div id="menuInhoud">
+		<hgroup>
+			<h1>HOME</h1>
+				<h2>Lente</h2>
+					<h3>page <a href="zien/thuis">10</a></h3>
+						<h4>Bloesem in de Betuwe</h4>
+			<h1>ROWEZ</h1>
+				<h2>Nieuw site</h2>
+					<h3>page <a href="zien/rowez">20</a></h3>
+						<h4>Geschikt voor alle scherm formaten</h4>
+			<h1>Over</h1>
+				<h2>Ron</h2>
+					<h3>page <a href="zien/over">30</a></h3>
+						<h4>Woonachtig in de gemeente Buren, Holland</h4>
+		</hgroup>
+	</div>
+</body>
+</html>
